--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
       <main>
         <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
           <div class="col">
-            <div class="card mb-4 rounded-3 shadow-sm">
-              <div class="card-header py-3">
+            <div class="card mb-4 rounded-3 shadow-sm border-dark">
+              <div class="card-header py-3 text-bg-dark border-dark">
                 <h4 class="my-0 fw-normal">Chihuahua</h4>
               </div>
               <div class="card-body">
@@ -167,8 +167,8 @@
             </div>
           </div>
           <div class="col">
-            <div class="card mb-4 rounded-3 shadow-sm">
-              <div class="card-header py-3">
+            <div class="card mb-4 rounded-3 shadow-sm border-dark">
+              <div class="card-header py-3 text-bg-dark border-dark">
                 <h4 class="my-0 fw-normal">Labrador</h4>
               </div>
               <div class="card-body">
