--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                   <li>Priority email support</li>
                   <li>Help center access</li>
                 </ul>
-                <button type="button" class="w-100 btn btn-lg btn-dark">Get started</button>
+                <button type="button" class="w-100  btn btn-lg btn-outline-dark">Get started</button>
               </div>
             </div>
           </div>
@@ -196,7 +196,7 @@
                   <li>Phone and email support</li>
                   <li>Help center access</li>
                 </ul>
-                <button type="button" class="w-100 btn btn-lg btn-dark">Contact us</button>
+                <button type="button" class="w-100  btn btn-lg btn-outline-dark">Contact us</button>
               </div>
             </div>
           </div>
